Ensure homelink on header visible where needed only

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -33,7 +33,7 @@
 }
 .app-header-home {
   .home-link {
-    display: none;
+    // display: none;
   }
 }
 
